[package]
name = "pedalrs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # maximum optimisations
lto = true      # link-time-optimisations for further size reduction

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0"
nb = "^0.1.2"
switch-hal = "^0.4.0"

usb-device = "^0.2.8"
usbd-hid = "^0.5.2"

# uncomment this and the patch section to use the haata version of these libs
# usbd-hid = { git = "https://github.com/haata/usbd-hid.git", branch = "master" } 

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt", "stm32-usbd"]
version = "0.18.0"

[dependencies.serde]
version="1"
default-features=false

# [patch.crates-io]
# usb-device = { git = "https://github.com/haata/usb-device.git" }
