[package]
name = "pedalrs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # maximum optimisations
lto = true      # link-time-optimisations for further size reduction

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0"
nb = "^0.1.2"
switch-hal = "^0.4.0"

usb-device = "^0.2.8"
usbd-hid = "^0.5.2"

eeprom24x = "0.5.0"
bitbang-hal = "0.3.2"

[dependencies.stm32f1xx-hal]
optional = true
default-features = false
version = "^0.6.1"

[dependencies.stm32f0xx-hal]
optional = true
default-features = false
version = "0.18.0"

[dependencies.serde]
version="1"
default-features=false

[features]
default = ["stm32f0"]
stm32f0 = ["stm32f0xx-hal/stm32f042", "stm32f0xx-hal/rt", "stm32f0xx-hal/stm32-usbd"]
stm32f1 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt", "stm32f1xx-hal/medium", "stm32f1xx-hal/stm32-usbd"]
